update: cross out first req

--- a/TODO
+++ b/TODO
@@ -1,30 +1,32 @@
 -*- mode: org; coding: utf-8; -*-
-* Specification [0/7]
+* Specification [1/7]
    :PROPERTIES:
    :CUSTOM_ID: specification
    :END:
 
-Using Python, JavaScript, HTML, and CSS, complete the implementation
-of a social network that allows users to make posts, follow other
-users, and “like” posts. You must fulfill the following requirements:
+   You must fulfill the following requirements:
 
-- [ ] *New Post*: Users who are signed in should be able to write a new
+- [X] *New Post*: Users who are signed in should be able to write a new
   text-based post by filling in text into a text area and then
   clicking a button to submit the post.
 
-  - [ ] The screenshot at the top of this specification shows the “New
+  - [X] The screenshot at the top of this specification shows the “New
     Post” box at the top of the “All Posts” page. You may choose to do
     this as well, or you may make the “New Post” feature a separate
     page.
 
-- [ ] *All Posts*: The “All Posts” link in the navigation bar should
+- [-] *All Posts*: The “All Posts” link in the navigation bar should
   take the user to a page where they can see all posts from all users,
   with the most recent posts first.
 
-  - [ ] Each post should include the username of the poster, the post
+  - [X] Each post should include the username of the poster, the post
     content itself, the date and time at which the post was made, and
     the number of “likes” the post has (this will be 0 for all posts
     until you implement the ability to “like” a post later).
+
+  - [ ] Posts should be in chronological order
+
+  # TODO - [ ] Try implementing adding comments. Look [[https://docs.djangoproject.com/en/3.0/topics/http/sessions/#module-django.contrib.sessions][here]] for inspiration:
 
 - [ ] *Profile Page*: Clicking on a username should load that user's
   profile page. This page should:
@@ -45,6 +47,7 @@ users, and “like” posts. You must fulfill the following requirements:
 
   - [ ] This page should behave just as the “All Posts” page does, just
     with a more limited set of posts.
+
   - [ ] This page should only be available to users who are signed in.
 
 - [ ] *Pagination*: On any page that displays posts, posts should only
