--- a/TODO
+++ b/TODO
@@ -9,7 +9,6 @@
 - [X] *New Post*: Users who are signed in should be able to write a new
   text-based post by filling in text into a text area and then
   clicking a button to submit the post.
-
   - [X] The screenshot at the top of this specification shows the “New
     Post” box at the top of the “All Posts” page. You may choose to do
     this as well, or you may make the “New Post” feature a separate
@@ -18,15 +17,14 @@
 - [-] *All Posts*: The “All Posts” link in the navigation bar should
   take the user to a page where they can see all posts from all users,
   with the most recent posts first.
-
   - [X] Each post should include the username of the poster, the post
     content itself, the date and time at which the post was made, and
     the number of “likes” the post has (this will be 0 for all posts
     until you implement the ability to “like” a post later).
-
   - [ ] Posts should be in chronological order
-
   # TODO - [ ] Try implementing adding comments. Look [[https://docs.djangoproject.com/en/3.0/topics/http/sessions/#module-django.contrib.sessions][here]] for inspiration:
+  # seems this would require a recursive CTE as said in
+  # https://www.youtube.com/watch?v=M4O0YQGTxjM
 
 - [ ] *Profile Page*: Clicking on a username should load that user's
   profile page. This page should:
@@ -44,10 +42,8 @@
 - [ ] *Following*: The “Following” link in the navigation bar should
   take the user to a page where they see all posts made by users that
   the current user follows.
-
   - [ ] This page should behave just as the “All Posts” page does, just
     with a more limited set of posts.
-
   - [ ] This page should only be available to users who are signed in.
 
 - [ ] *Pagination*: On any page that displays posts, posts should only
@@ -56,13 +52,11 @@
   posts (which should be older than the current page of posts). If not
   on the first page, a “Previous” button should appear to take the
   user to the previous page of posts as well.
-
   - [ ] See the *Hints* section for some suggestions on how to implement
     this.
 
 - [ ] *Edit Post*: Users should be able to click an “Edit” button or
   link on any of their own posts to edit that post.
-
   - [ ] When a user clicks “Edit” for one of their own posts, the
     content of their post should be replaced with a =textarea= where
     the user can edit the content of their post.
@@ -75,7 +69,6 @@
 
 - [ ] ~“Like” and “Unlike”~: Users should be able to click a button or
   link on any post to toggle whether or not they “like” that post.
-
   - [ ] Using JavaScript, you should asynchronously let the server know
     to update the like count (as via a call to =fetch=) and then
     update the post's like count displayed on the page, without
