--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 -*- mode: org; coding: utf-8; -*-
-* Specification [1/7]
+* Specification [4/7]
    :PROPERTIES:
    :CUSTOM_ID: specification
    :END:
@@ -14,24 +14,24 @@
     this as well, or you may make the “New Post” feature a separate
     page.
 
-- [-] *All Posts*: The “All Posts” link in the navigation bar should
+- [X] *All Posts*: The “All Posts” link in the navigation bar should
   take the user to a page where they can see all posts from all users,
   with the most recent posts first.
   - [X] Each post should include the username of the poster, the post
     content itself, the date and time at which the post was made, and
     the number of “likes” the post has (this will be 0 for all posts
     until you implement the ability to “like” a post later).
-  - [ ] Posts should be in chronological order
+  - [X] Posts should be in chronological order
   # TODO - [ ] Try implementing adding comments. Look [[https://docs.djangoproject.com/en/3.0/topics/http/sessions/#module-django.contrib.sessions][here]] for inspiration:
   # seems this would require a recursive CTE as said in
   # https://www.youtube.com/watch?v=M4O0YQGTxjM
 
-- [ ] *Profile Page*: Clicking on a username should load that user's
+- [-] *Profile Page*: Clicking on a username should load that user's
   profile page. This page should:
 
-  - [ ] Display the number of followers the user has, as well as the
+  - [X] Display the number of followers the user has, as well as the
     number of people that the user follows.
-  - [ ] Display all of the posts for that user, in reverse chronological
+  - [X] Display all of the posts for that user, in reverse chronological
     order.
   - [ ] For any other user who is signed in, this page should also
     display a “Follow” or “Unfollow” button that will let the current
@@ -39,20 +39,20 @@
     posts. Note that this only applies to any “other” user: a user
     should not be able to follow themselves.
 
-- [ ] *Following*: The “Following” link in the navigation bar should
+- [X] *Following*: The “Following” link in the navigation bar should
   take the user to a page where they see all posts made by users that
   the current user follows.
-  - [ ] This page should behave just as the “All Posts” page does, just
+  - [X] This page should behave just as the “All Posts” page does, just
     with a more limited set of posts.
-  - [ ] This page should only be available to users who are signed in.
+  - [X] This page should only be available to users who are signed in.
 
-- [ ] *Pagination*: On any page that displays posts, posts should only
+- [X] *Pagination*: On any page that displays posts, posts should only
   be displayed 10 on a page. If there are more than ten posts, a
   “Next” button should appear to take the user to the next page of
   posts (which should be older than the current page of posts). If not
   on the first page, a “Previous” button should appear to take the
   user to the previous page of posts as well.
-  - [ ] See the *Hints* section for some suggestions on how to implement
+  - [X] See the *Hints* section for some suggestions on how to implement
     this.
 
 - [ ] *Edit Post*: Users should be able to click an “Edit” button or
